apps/karakeep/web/ingress-cloudflare.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ingress
spec:
  ingressClassName: cloudflare
  rules:
    - host: keep.krupa.net.pl
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 3000
            path: /
            pathType: Prefix
